<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/login_signin_bg_ll"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.login.SigninActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/change_language"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/Input_your_account"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_signin_user_et"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_signup_et"
        android:gravity="center"
        android:text="@string/Phone_Number"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/login_signin_password_et"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_signup_et"
        android:gravity="center"
        android:text="@string/Password"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/login_signin_btn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_signup_btn"
        android:gravity="center"
        android:text="@string/Sign_in"
        android:textAllCaps="false"
        android:textColor="@color/login_bg"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/Dont_have_an_account"
        android:textColor="@color/white"
        android:textSize="10sp" />

</LinearLayout>