<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/list_scenery_detail_bg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/toolbar_bg" />

    <ImageButton
        android:id="@+id/list_scenery_detail_back_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/left_arraw"
        android:padding="10dp"
        android:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:background="@drawable/list_main_search_bg"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <TextView
                    android:id="@+id/list_scenery_detail_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="West Lake"
                    android:textSize="25sp"

                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/list_scenery_detail_local_iv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/list_scenery_detail_name_tv"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/lineup_local" />

                <TextView
                    android:id="@+id/list_scenery_detail_local_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/list_scenery_detail_name_tv"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@+id/list_scenery_detail_local_iv"
                    android:text="West Lake District,Gushan Road" />

                <ImageView
                    android:id="@+id/list_scenery_detail_collection_iv"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/list_museum_detail_collected" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/Local"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:background="@color/toolbar_bg" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/dottedline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Introduce"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/information"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Sight"
                    android:textSize="15sp" />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Introduce"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/list_scenery_detail_content_tv"
                android:layout_width="match_parent"
                android:text="西湖，位于浙江省杭州市西湖区龙井路1号，杭州市区西部，景区总面积49平方千米，汇水面积为21.22平方千米，湖面面积为6.38平方千米。
西湖南、西、北三面环山，湖中白堤、苏堤、杨公堤、赵公堤将湖面分割成若干水面。西湖的湖体轮廓呈近椭圆形，湖底部较为平坦。湖泊天然地表水源是金沙涧、龙泓涧、赤山涧（慧因涧）、长桥溪四条溪流。西湖地处中国东南丘陵边缘和亚热带北缘，年均太阳总幅射量在100—110千卡/平方厘米之间，日照时数1800—2100小时。 [1]
西湖有100多处公园景点，有“西湖十景”、“新西湖十景”、“三评西湖十景”之说，有60多处国家、省、市级重点文物保护单位和20多座博物馆，有断桥、雷峰塔、钱王祠、净慈寺、苏小小墓等景点。 [2]
2007年，杭州市西湖风景名胜区被评为“国家AAAAA级旅游景区”。 [3]  2011年6月24日，“杭州西湖文化景观”正式被列入《世界遗产名录》。"
                android:layout_height="100dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/dottedline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/information"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Service"
                android:textSize="10sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/lsit_scenery_park" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:text="@string/Parking"
                android:textSize="10sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/dottedline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Open_Time"
                android:layout_marginTop="5dp"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/All_Day"
                android:textSize="10sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/dottedline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Sight"
                android:textSize="15sp" />

            <com.youth.banner.Banner
                android:id="@+id/list_scenery_detail_banner"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="150dp"></com.youth.banner.Banner>


        </LinearLayout>
    </ScrollView>


</FrameLayout>