<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.collection.CollectionFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/toolbar_bg"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/map_main_scenery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Scenery"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/map_main_museum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/Museum"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/map_main_food"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Food"
            android:textSize="19sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
        <ImageView
            android:id="@+id/map_main_search_iv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="?actionBarSize"
            android:layout_gravity="end"
            android:padding="12dp"
            android:src="@drawable/map_main_search" />
    </LinearLayout>

   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <com.amap.api.maps.MapView
       android:id="@+id/map_mainmap"
       android:layout_width="match_parent"
       android:layout_height="match_parent"></com.amap.api.maps.MapView>


       <ImageView
           android:id="@+id/map_main_selected_tab_iv"
           android:layout_width="110dp"
           android:layout_height="50dp"
           android:layout_gravity="center_horizontal"
           android:background="@drawable/map_tab_museum" />

   </FrameLayout>


</LinearLayout>